# Multimodal-Action-Recognition-and-Prediction

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  testing.ipynb  train_till_P105.csv
annotations/: test_annotations.csv  train_annotations.csv  val_annotations.csv
experiment_notebooks/: actiion_recognition_ucf50.ipynb  model_experiments.ipynb  old_ek100_Image_reading_testing.ipynb  old_ek100_dataloader_testing.ipynb  old_ek100_minor_eda.ipynb  ucf50_annotations_testing.ipynb  ucf50_minor_eda.ipynb  ucf50_video_to_rgb_frames.ipynb
experiment_notebooks/annotations/: actions_label.csv  annotations.csv
experiment_notebooks/old_ek100_notebooks/: old_ek100_dataloader_testing.ipynb
experiment_notebooks/outputs/logs/X3D_only_freeze/run_20250422-210941/: events.out.tfevents.1745336381.DESKTOP-ETK00LI.10396.0
outputs/logs/X3D_only_freeze/run_20250228-021754/: events.out.tfevents.1740689274.DESKTOP-ETK00LI.20056.0
outputs/logs/X3D_only_freeze/run_20250228-175219/: events.out.tfevents.1740745339.DESKTOP-ETK00LI.7156.0
src/: config.py  dataloader.py  dataset.py  download_dataset.py  test.py  train.py
src/datasets/: EpicKitchens100Dataset.py  UCF50Dataset.py  __init__.py
src/models/: X3D.py
src/transforms/: FixedSizeClipSampler.py  PackPathway.py  TransformKey.py  __init__.py
src/utils/: create_annotations_file.py  create_annotations_files.py  download_dataset.py  logs.py
test_notebooks/: Image_reading_testing.ipynb  dataloader_testing.ipynb  minor_eda.ipynb  model_experiments.ipynb
(+10 files in other folders)
